--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
 importlib-resources==5.7.1
@@ -17,6 +18,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
+psycopg2==2.9.3
 python-dotenv==0.20.0
 SQLAlchemy==1.4.37
 visitor==0.1.3
